# fino-filing

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  apple_submissions_recent.json  hoge.json  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.toml
.debug/: collection_initilize.py  collector_edgar.py  collector_edinet.py  custom_filing_collection.py  dataclass_dict.py  date.py  direct_timestamp.py  get_catalog_info.py  http_client.py  typ.py
.debug/.store/: fino_catalog.db
.github/workflows/: build_docs_test.yaml  cd_create_release_tag.yaml  cd_deploy_package.yaml  cd_publish_package_pypi.yaml  ci_linter.yaml  ci_test_module.yaml  deploy_docs.yaml  docs_build_docs_test.yaml  docs_deploy_docs.yaml  linter.yaml  publish_package_pypi.yaml  test_module.yaml  test_scenario.yaml
.tasks/1_field_class_access_expr/: 1_design.md
.tasks/2_scenario_tests/: 1_scenario_restructure.md
debug/: collection_add_sample.py  collection_initilize.py  collector_edgar.py  collector_edger.py  collector_edinet.py  custom_filing_collection.py  date.py  edger_client.py  edinet_client.py  get_catalog_info.py  hgoe.py
docs/: README.md  docusaurus.config.ts  fino-architecture.puml  package-lock.json  project.md  sidebars.ts
docs/archive/: _coding_archive.puml  design_pattern_catalog.md
docs/archive/collection/: scenario.md
docs/blog/: 2026-03-08-first-blog-post.md  authors.yml  tags.yml
docs/collection/: coding_collection.puml  component_collection.puml  scenario.md
docs/design/: architecture.puml  coding.puml  coding_collection.puml  coding_collector.puml  coding_final.puml  collection_spec.md  collector_strategy.md  components.puml  field_type_strategy.md  get_started.md  test-matrix.md  testing-strategy.md
docs/dev/: release.md
docs/docs/: get_started.md  intro.md
docs/docs/dev/: Codebase.md  Contributing.md  Design.md  Implementations.md  Test.md  intro.md
docs/docs/spec/: Quick-start.md  getting-started.md  intro.md  overview.md  scenarios.md
docs/docs/testing/: exception-spec.md
docs/idea/: design_pattern_catalog.md
docs/idea/non_ddd/: simplified-design-notes.md
docs/idea/oss/: ARCHITECTURE_REDESIGN_GUIDE.md  MIGRATION_CHECKLIST.md  fino-architecture-redesign.md  fino-architecture.puml  rule.md
docs/src/css/: custom.css
docs/testing/: testing-strategy.md
new_doc/: field_type_strategy.md  project.md
new_doc/archive/collector/: component_collector.puml
new_doc/testing/: exception-spec.md
scripts/: generate_filing_queries.py
src/fino_filing/: __init__.py
src/fino_filing/collection/: __init__.py  catalog.py  collection.py  collecton.py  error.py  field.py  filing.py  filing_resolver.py  index_db.py  locator.py  models.py  registory.py  registry.py  spec.py  storage.py
src/fino_filing/collector/: __init__.py  _api_client.py  _http_client.py  base.py  (+2 more)
test/: README.md  conftest.py
test/check/: collection.py  field.py  filing.py  typ.py
test/debug/: collection.py  custom_filing_collection.py  error.py  filing.py  get_catalog_info.py  hgoe.py
test/scenario/: conftest.py
(+225 files in other folders)
