[project]
name = "fino-filing"
version = "0.1.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Collection manager & Collector for Financial Filings"
authors = [{ name = "akidoki", email = "odukaki@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["duckdb>=1.4.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fino_filing"]

[dependency-groups]
lint = ["ruff>=0.14.8"]
test = [
    "pytest>=9.0.2",
    "moto[s3]>=5.0.0",
    "pytest-cov>=7.0.0",
]
typing = ["boto3-stubs[s3]>=1.35.0"]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typing" },
]
