[project]
name = "fino-filing"
dynamic = ["version"]
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Collection manager & Collector for Financial Filings"
authors = [{ name = "akidoki", email = "odukaki@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/fino_filing"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
# 既存の v なしタグ（例: 0.2.0b1）と v 付きの両方を許容する
pattern = "default-unprefixed"

[dependency-groups]
lint = ["ruff>=0.14.8"]
test = ["pytest>=9.0.2", "moto[s3]>=5.0.0", "pytest-cov>=7.0.0"]
typing = ["boto3-stubs[s3]>=1.35.0"]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typing" },
    "pre-commit>=4.5.1",
]

[tool.coverage.run]
source = ["src/fino_filing"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
